--- a/report.html
+++ b/report.html
@@ -11859,7 +11859,7 @@ div#notebook {
 <span class="n">n_students</span> <span class="o">=</span> <span class="n">student_data</span><span class="o">.</span><span class="n">shape</span><span class="p">[</span><span class="mi">0</span><span class="p">]</span>
 
 <span class="c1"># TODO: Calculate number of features</span>
-<span class="n">n_features</span> <span class="o">=</span> <span class="n">student_data</span><span class="o">.</span><span class="n">shape</span><span class="p">[</span><span class="mi">1</span><span class="p">]</span>
+<span class="n">n_features</span> <span class="o">=</span> <span class="n">student_data</span><span class="o">.</span><span class="n">shape</span><span class="p">[</span><span class="mi">1</span><span class="p">]</span><span class="o">-</span><span class="mi">1</span>
 
 <span class="c1"># TODO: Calculate passing students</span>
 <span class="n">n_passed</span> <span class="o">=</span> <span class="n">student_data</span><span class="p">[</span><span class="n">student_data</span><span class="o">.</span><span class="n">passed</span> <span class="o">==</span> <span class="s1">&#39;yes&#39;</span><span class="p">]</span><span class="o">.</span><span class="n">shape</span><span class="p">[</span><span class="mi">0</span><span class="p">]</span>
@@ -11889,7 +11889,7 @@ div#notebook {
 <div class="output_area"><div class="prompt"></div>
 <div class="output_subarea output_stream output_stdout output_text">
 <pre>Total number of students: 395
-Number of features: 31
+Number of features: 30
 Number of students who passed: 265
 Number of students who failed: 130
 Graduation rate of the class: 67.09%
@@ -12158,13 +12158,13 @@ Testing set has 95 samples.
 <li><strong>Decision Trees</strong>:<ul>
 <li><strong>Real-world application</strong>: Have been used in predicting stability of the power grid [1]</li>
 <li><strong>Strengths</strong>: More robust against skewed distributions [2]</li>
-<li><strong>Weaknesses</strong>: Susceptible to noise. If there is lots of noise in underlying data set the decision tree shape may change. Also, boundaries for making best decisions are parallel to the axis. It does not take into account that a diagonal boundary may perform better [3]</li>
+<li><strong>Weaknesses</strong>: Susceptible to noise. If there is lots of noise in underlying data set the decision tree shape may change. Also, boundaries for making best decisions are parallel to the axis. It does not take into account that a diagonal boundary may perform better [3] Also, overly complex decision trees may overfit the data [8]</li>
 <li><strong>What makes this a good candidate</strong>: Relatively easy to implement and I don't expect too much noise from the data because the data is likely taken from surveys or from student applications. I would expect noisy data to come from measurement error from a device such as a sensor. </li>
 </ul>
 </li>
 <li><strong>K-Nearest Neightbors</strong>:<ul>
 <li><strong>Real-world application</strong>: Detection of medical insurance fraud [4]</li>
-<li><strong>Strengths</strong>: Requires little training of data before algorithm is ran. </li>
+<li><strong>Strengths</strong>: Requires little training of data before algorithm is ran. Also, KNN is robust against noisy data [9]</li>
 <li><strong>Weaknesses</strong>: Needs data set in memory at runtime to perform classifications. Not good if data set is large.
 Also, the model cannot be interpreted [5]</li>
 <li><strong>What makes this a good candidate</strong>: The dataset is relatively small and so we aren't penalized too much for using this algorithm. </li>
@@ -12186,6 +12186,8 @@ Also, the model cannot be interpreted [5]</li>
 <p>[5] : <a href="http://www.cs.upc.edu/~bejar/apren/docum/trans/03d-algind-knn-eng.pdf">http://www.cs.upc.edu/~bejar/apren/docum/trans/03d-algind-knn-eng.pdf</a></p>
 <p>[6] : <a href="http://www.uni-obuda.hu/journal/Markoski_Ivankovic_Ratgeber_Pecev_Glusac_57.pdf">http://www.uni-obuda.hu/journal/Markoski_Ivankovic_Ratgeber_Pecev_Glusac_57.pdf</a></p>
 <p>[7] : <a href="http://www.nickgillian.com/wiki/pmwiki.php/GRT/AdaBoost">http://www.nickgillian.com/wiki/pmwiki.php/GRT/AdaBoost</a></p>
+<p>[8] : <a href="http://scikit-learn.org/stable/modules/tree.html">http://scikit-learn.org/stable/modules/tree.html</a></p>
+<p>[9] : <a href="http://people.revoledu.com/kardi/tutorial/KNN/Strength%20and%20Weakness.htm">http://people.revoledu.com/kardi/tutorial/KNN/Strength%20and%20Weakness.htm</a></p>
 
 </div>
 </div>
@@ -12210,7 +12212,7 @@ Also, the model cannot be interpreted [5]</li>
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[9]:</div>
+<div class="prompt input_prompt">In&nbsp;[6]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython2"><pre><span></span><span class="k">def</span> <span class="nf">train_classifier</span><span class="p">(</span><span class="n">clf</span><span class="p">,</span> <span class="n">X_train</span><span class="p">,</span> <span class="n">y_train</span><span class="p">):</span>
@@ -12283,7 +12285,7 @@ Also, the model cannot be interpreted [5]</li>
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[12]:</div>
+<div class="prompt input_prompt">In&nbsp;[7]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython2"><pre><span></span><span class="c1"># TODO: Import the three supervised learning models from sklearn</span>
@@ -12294,8 +12296,8 @@ Also, the model cannot be interpreted [5]</li>
 
 <span class="c1"># TODO: Initialize the three models</span>
 <span class="n">clf_A</span> <span class="o">=</span> <span class="n">tree</span><span class="o">.</span><span class="n">DecisionTreeClassifier</span><span class="p">()</span>
-<span class="n">clf_B</span> <span class="o">=</span> <span class="n">KNeighborsClassifier</span><span class="p">(</span><span class="n">n_neighbors</span><span class="o">=</span><span class="mi">3</span><span class="p">)</span>
-<span class="n">clf_C</span> <span class="o">=</span> <span class="n">AdaBoostClassifier</span><span class="p">(</span><span class="n">n_estimators</span><span class="o">=</span><span class="mi">100</span><span class="p">)</span>
+<span class="n">clf_B</span> <span class="o">=</span> <span class="n">KNeighborsClassifier</span><span class="p">()</span>
+<span class="n">clf_C</span> <span class="o">=</span> <span class="n">AdaBoostClassifier</span><span class="p">()</span>
 
 <span class="c1"># TODO: Set up the training set sizes</span>
 <span class="n">X_train_100</span> <span class="o">=</span> <span class="n">X_train</span><span class="p">[</span><span class="mi">0</span><span class="p">:</span><span class="mi">100</span><span class="p">]</span>
@@ -12328,59 +12330,59 @@ Also, the model cannot be interpreted [5]</li>
 <div class="output_area"><div class="prompt"></div>
 <div class="output_subarea output_stream output_stdout output_text">
 <pre>Training a DecisionTreeClassifier using a training set size of 100. . .
-Trained model in 0.0012 seconds
-Made predictions in 0.0004 seconds.
+Trained model in 0.0011 seconds
+Made predictions in 0.0002 seconds.
 F1 score for training set: 1.0000.
 Made predictions in 0.0002 seconds.
-F1 score for test set: 0.6071.
+F1 score for test set: 0.6250.
 Training a KNeighborsClassifier using a training set size of 100. . .
-Trained model in 0.0007 seconds
-Made predictions in 0.0014 seconds.
-F1 score for training set: 0.8321.
-Made predictions in 0.0013 seconds.
-F1 score for test set: 0.7482.
+Trained model in 0.0006 seconds
+Made predictions in 0.0012 seconds.
+F1 score for training set: 0.8060.
+Made predictions in 0.0012 seconds.
+F1 score for test set: 0.7246.
 Training a AdaBoostClassifier using a training set size of 100. . .
-Trained model in 0.1626 seconds
-Made predictions in 0.0123 seconds.
-F1 score for training set: 0.9846.
-Made predictions in 0.0118 seconds.
-F1 score for test set: 0.7576.
+Trained model in 0.0752 seconds
+Made predictions in 0.0044 seconds.
+F1 score for training set: 0.9481.
+Made predictions in 0.0043 seconds.
+F1 score for test set: 0.7669.
 Training a DecisionTreeClassifier using a training set size of 200. . .
 Trained model in 0.0015 seconds
 Made predictions in 0.0002 seconds.
 F1 score for training set: 1.0000.
-Made predictions in 0.0021 seconds.
-F1 score for test set: 0.7273.
+Made predictions in 0.0002 seconds.
+F1 score for test set: 0.7287.
 Training a KNeighborsClassifier using a training set size of 200. . .
 Trained model in 0.0007 seconds
-Made predictions in 0.0029 seconds.
-F1 score for training set: 0.8966.
+Made predictions in 0.0030 seconds.
+F1 score for training set: 0.8800.
 Made predictions in 0.0017 seconds.
-F1 score for test set: 0.7413.
+F1 score for test set: 0.7692.
 Training a AdaBoostClassifier using a training set size of 200. . .
-Trained model in 0.1970 seconds
-Made predictions in 0.0154 seconds.
-F1 score for training set: 0.8921.
-Made predictions in 0.0131 seconds.
-F1 score for test set: 0.8065.
+Trained model in 0.0806 seconds
+Made predictions in 0.0053 seconds.
+F1 score for training set: 0.8927.
+Made predictions in 0.0044 seconds.
+F1 score for test set: 0.8281.
 Training a DecisionTreeClassifier using a training set size of 300. . .
 Trained model in 0.0020 seconds
-Made predictions in 0.0003 seconds.
+Made predictions in 0.0002 seconds.
 F1 score for training set: 1.0000.
 Made predictions in 0.0002 seconds.
-F1 score for test set: 0.6500.
+F1 score for test set: 0.6769.
 Training a KNeighborsClassifier using a training set size of 300. . .
 Trained model in 0.0008 seconds
-Made predictions in 0.0067 seconds.
-F1 score for training set: 0.8807.
+Made predictions in 0.0082 seconds.
+F1 score for training set: 0.8809.
 Made predictions in 0.0025 seconds.
-F1 score for test set: 0.7313.
+F1 score for test set: 0.7801.
 Training a AdaBoostClassifier using a training set size of 300. . .
-Trained model in 0.1891 seconds
-Made predictions in 0.0155 seconds.
-F1 score for training set: 0.8817.
-Made predictions in 0.0117 seconds.
-F1 score for test set: 0.7481.
+Trained model in 0.0853 seconds
+Made predictions in 0.0063 seconds.
+F1 score for training set: 0.8637.
+Made predictions in 0.0045 seconds.
+F1 score for test set: 0.7820.
 </pre>
 </div>
 </div>
@@ -12417,24 +12419,24 @@ F1 score for test set: 0.7481.
 <tbody>
 <tr>
 <td style="text-align:center">100</td>
-<td style="text-align:center">0.0012</td>
+<td style="text-align:center">0.0011</td>
 <td style="text-align:center">0.0002</td>
 <td style="text-align:center">1.00</td>
-<td style="text-align:center">0.6071</td>
+<td style="text-align:center">0.6250</td>
 </tr>
 <tr>
 <td style="text-align:center">200</td>
 <td style="text-align:center">0.0015</td>
-<td style="text-align:center">0.0021</td>
+<td style="text-align:center">0.0002</td>
 <td style="text-align:center">1.00</td>
-<td style="text-align:center">0.7273</td>
+<td style="text-align:center">0.7287</td>
 </tr>
 <tr>
 <td style="text-align:center">300</td>
 <td style="text-align:center">0.0020</td>
-<td style="text-align:center">0.002</td>
+<td style="text-align:center">0.0002</td>
 <td style="text-align:center">1.00</td>
-<td style="text-align:center">0.6500</td>
+<td style="text-align:center">0.6769</td>
 </tr>
 </tbody>
 </table>
@@ -12451,24 +12453,24 @@ F1 score for test set: 0.7481.
 <tbody>
 <tr>
 <td style="text-align:center">100</td>
-<td style="text-align:center">0.0007</td>
-<td style="text-align:center">0.0013</td>
-<td style="text-align:center">0.8321</td>
-<td style="text-align:center">0.7482</td>
+<td style="text-align:center">0.0006</td>
+<td style="text-align:center">0.0012</td>
+<td style="text-align:center">0.8060</td>
+<td style="text-align:center">0.7246</td>
 </tr>
 <tr>
 <td style="text-align:center">200</td>
 <td style="text-align:center">0.0007</td>
 <td style="text-align:center">0.0017</td>
-<td style="text-align:center">0.8966</td>
-<td style="text-align:center">0.7413</td>
+<td style="text-align:center">0.8800</td>
+<td style="text-align:center">0.7692</td>
 </tr>
 <tr>
 <td style="text-align:center">300</td>
 <td style="text-align:center">0.0008</td>
 <td style="text-align:center">0.0025</td>
-<td style="text-align:center">0.8807</td>
-<td style="text-align:center">0.7313</td>
+<td style="text-align:center">0.8809</td>
+<td style="text-align:center">0.7801</td>
 </tr>
 </tbody>
 </table>
@@ -12485,10 +12487,10 @@ F1 score for test set: 0.7481.
 <tbody>
 <tr>
 <td style="text-align:center">100</td>
-<td style="text-align:center">0.1626</td>
-<td style="text-align:center">0.0118</td>
-<td style="text-align:center">0.9846</td>
-<td style="text-align:center">0.7576</td>
+<td style="text-align:center">0.0806</td>
+<td style="text-align:center">0.0044</td>
+<td style="text-align:center">0.8927</td>
+<td style="text-align:center">0.8281</td>
 </tr>
 <tr>
 <td style="text-align:center">200</td>
@@ -12499,10 +12501,10 @@ F1 score for test set: 0.7481.
 </tr>
 <tr>
 <td style="text-align:center">300</td>
-<td style="text-align:center">0.1891</td>
-<td style="text-align:center">0.0117</td>
-<td style="text-align:center">0.8817</td>
-<td style="text-align:center">0.7481</td>
+<td style="text-align:center">0.0853</td>
+<td style="text-align:center">0.0045</td>
+<td style="text-align:center">0.8637</td>
+<td style="text-align:center">0.7820</td>
 </tr>
 </tbody>
 </table>
@@ -12535,7 +12537,7 @@ F1 score for test set: 0.7481.
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p><strong>Answer: </strong> The best performing model was AdaBoost. Compared to the decision tree and k-nearest neighbors algorithm, the AdaBoost algorithm had the best F1 score on the test data set on all training sizes. Although its training time and predicition time is lower compared to the other classifiers, the difference is inconsequential. At the largest training set the difference in training time between Adaboost and the fastest classifier time is 0.1883 sec. The difference in prediction times between Adaboost and the fastest classifier time is 0.0097 sec.</p>
+<p><strong>Answer: </strong> The best performing model was AdaBoost. Compared to the decision tree and k-nearest neighbors algorithm, the AdaBoost algorithm had the best F1 score on the test data set on all training sizes. Although its training time and predicition time is lower compared to the other classifiers, the difference is inconsequential. At the largest training set the difference in training time between Adaboost and the fastest classifier time is 0.0845 sec. The difference in prediction times between Adaboost and the fastest classifier time is 0.0043 sec.</p>
 <p>Given the increased prediction accuracy and inconsequential difference in training time, my recommendation would be to use the AdaBoost classifier in predicting if a student will graduate.</p>
 
 </div>
@@ -12588,7 +12590,7 @@ F1 score for test set: 0.7481.
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[62]:</div>
+<div class="prompt input_prompt">In&nbsp;[9]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython2"><pre><span></span><span class="c1"># TODO: Import &#39;GridSearchCV&#39; and &#39;make_scorer&#39;</span>
@@ -12635,9 +12637,9 @@ F1 score for test set: 0.7481.
 <div class="output_subarea output_stream output_stdout output_text">
 <pre>AdaBoostClassifier(algorithm=&#39;SAMME.R&#39;, base_estimator=None, learning_rate=3,
           n_estimators=49, random_state=None)
-Made predictions in 0.0084 seconds.
+Made predictions in 0.0060 seconds.
 Tuned model has a training F1 score of 0.8299.
-Made predictions in 0.0064 seconds.
+Made predictions in 0.0042 seconds.
 Tuned model has a testing F1 score of 0.8000.
 </pre>
 </div>
@@ -12662,7 +12664,7 @@ Tuned model has a testing F1 score of 0.8000.
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p><strong>Answer: </strong> The final model's F1 score for training is 0.8299 and the testing score is 0.8000. The untuned model had a training score of 0.8817 which is higher than the tuned model. However, the tuned model had a 2.02% increase in test score. The tune model had a score of 0.800 wherase the original score was 0.7841.</p>
+<p><strong>Answer: </strong> The final model's F1 score for training is 0.8299 and the testing score is 0.8000. The untuned model had a training score of 0.8637 which is higher than the tuned model. However, the tuned model had a 2.30% increase in test score. The tune model had a score of 0.800 wherase the original score was 0.7820.</p>
 
 </div>
 </div>
